Add new MP3 song and deployment files

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
     </div>
     
     <script src="songs.js"></script>
+    <script src="auto-song-loader.js"></script>
     <script src="game_new.js"></script>
 </body>
 </html>
